force-app/main/default/objects/Individual/fields/AceptoPoliticaPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>AceptoPoliticaPrivacidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consentimiento propio de Arriaga</description>
    <label>Acepto política de privacidad</label>
    <type>Checkbox</type>
</CustomField>