force-app/main/default/objects/Individual/fields/DeseoRecibirMensajesDeWhatsapp__c.field-meta.xml
<CustomField>
    <fullName>DeseoRecibirMensajesDeWhatsapp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Deseo recibir comunicaciones de Whatsapp de Arriaga Asociados en función de mi comportamiento y mis preferencias personales, en los términos previstos en la Política de Privacidad.</description>
    <inlineHelpText>Deseo recibir comunicaciones de Whatsapp de Arriaga Asociados en función de mi comportamiento y mis preferencias personales, en los términos previstos en la Política de Privacidad.</inlineHelpText>
    <label>Deseo recibir Mensajes de Whatsapp</label>
    <type>Checkbox</type>
</CustomField>