force-app/main/default/objects/Individual/fields/FechaPoliticaPrivacidad__c.field-meta.xml
<CustomField>
    <fullName>FechaPoliticaPrivacidad__c</fullName>
    <description>Fecha/hora de actualización de la aceptación de la política de privacidad</description>
    <inlineHelpText>Fecha/hora de actualización de la aceptación de la política de privacidad</inlineHelpText>
    <label>Fecha política privacidad</label>
    <type>DateTime</type>
</CustomField>