force-app/main/default/objects/Individual/fields/FechaRecibirComunicacionesComerciales__c.field-meta.xml
<CustomField>
    <fullName>FechaRecibirComunicacionesComerciales__c</fullName>
    <description>Fecha de actualización del consentimiento de recibir comunicaciones comerciales de Arriaga Asociados</description>
    <inlineHelpText>Fecha de actualización del consentimiento de recibir comunicaciones comerciales de Arriaga Asociados</inlineHelpText>
    <label>Fecha recibir comunicaciones comerciales</label>
    <type>DateTime</type>
</CustomField>