force-app/main/default/objects/Individual/fields/FechaRecibirMensajesWhatsApp__c.field-meta.xml
<CustomField>
    <fullName>FechaRecibirMensajesWhatsApp__c</fullName>
    <description>Fecha de actualización del consentimiento de recibir mensajes de WhatsApp de Arriaga Asociados</description>
    <inlineHelpText>Fecha de actualización del consentimiento de recibir mensajes de WhatsApp de Arriaga Asociados</inlineHelpText>
    <label>Fecha recibir mensajes WhatsApp</label>
    <type>DateTime</type>
</CustomField>