force-app/main/default/objects/Individual/fields/lcs_gdpr__DateCanStorePiiElsewhere__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateCanStorePiiElsewhere__c</fullName>
    <description>Fecha de última modificación del campo &quot;Es correcto almacenar datos de información de indentificación personal en otro lugar&quot;</description>
    <label>Fecha Es correcto almacenar datos...</label>
    <type>DateTime</type>
</CustomField>