force-app/main/default/objects/Individual/fields/lcs_gdpr__DateDoNotCall__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateDoNotCall__c</fullName>
    <description>Fecha de última modificación del campo &quot;No llamar&quot;</description>
    <label>Fecha No llamar</label>
    <type>DateTime</type>
</CustomField>