force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutGeoTracking__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutGeoTracking__c</fullName>
    <description>Fecha de última modificación del campo &quot;Bloquear seguimiento geoubicación&quot;</description>
    <label>Fecha Bloquear seguimiento geoubicación</label>
    <type>DateTime</type>
</CustomField>