force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutOfEmail__c</fullName>
    <description>Fecha de última modificación del campo &quot;No recibir email&quot;</description>
    <label>Fecha No recibir email</label>
    <type>DateTime</type>
</CustomField>