force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutOfFax__c</fullName>
    <description>Fecha de última modificación del campo &quot;No recibir fax&quot;</description>
    <label>Fecha No recibir fax</label>
    <type>DateTime</type>
</CustomField>