force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutOfPostalMail__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutOfPostalMail__c</fullName>
    <description>Fecha de última modificación del campo &quot;No recibir correo postal&quot;</description>
    <label>Fecha No recibir correo postal</label>
    <type>DateTime</type>
</CustomField>