force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutOfSMS__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutOfSMS__c</fullName>
    <description>Fecha de última modificación del campo &quot;No recibir SMS&quot;</description>
    <label>Fecha No recibir SMS</label>
    <type>DateTime</type>
</CustomField>