force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutProcessing__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutProcessing__c</fullName>
    <description>Fecha de última modificación del campo &quot;No procesar&quot;</description>
    <label>Fecha No procesar</label>
    <type>DateTime</type>
</CustomField>