force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutProfiling__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutProfiling__c</fullName>
    <description>Fecha de última modificación del campo &quot;No aplicar perfil&quot;</description>
    <label>Fecha No aplicar perfil</label>
    <type>DateTime</type>
</CustomField>