force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutSolicit__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutSolicit__c</fullName>
    <description>Fecha de última modificación del campo &quot;No comercializar&quot;</description>
    <label>Fecha No comercializar</label>
    <type>DateTime</type>
</CustomField>