force-app/main/default/objects/Individual/fields/lcs_gdpr__DateHasOptedOutTracking__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateHasOptedOutTracking__c</fullName>
    <description>Fecha de última modificación del campo &quot;No realizar seguimiento&quot;</description>
    <label>Fecha No realizar seguimiento</label>
    <type>DateTime</type>
</CustomField>