force-app/main/default/objects/Individual/fields/lcs_gdpr__DateSendIndividualData__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateSendIndividualData__c</fullName>
    <description>Fecha de última modificación del campo &quot;Exportar datos de persona&quot;</description>
    <label>Fecha Exportar datos de persona</label>
    <type>DateTime</type>
</CustomField>