force-app/main/default/objects/Individual/fields/lcs_gdpr__DateShouldForget__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DateShouldForget__c</fullName>
    <description>Fecha de última modificación del campo &quot;Olvidar a esta persona&quot;</description>
    <label>Fecha Olvidar a esta persona</label>
    <type>DateTime</type>
</CustomField>