force-app/main/default/objects/Individual/fields/lcs_gdpr__DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__DoNotCall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se trae del candidato o del contacto para indicar que no le quiere que se le contacte telefónicamente</description>
    <label>No llamar</label>
    <type>Checkbox</type>
</CustomField>