force-app/main/default/objects/Individual/fields/lcs_gdpr__HasOptedOutOfEmail__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutOfEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se trae del contacto o el candidato para indicar que no debe de ser contacto por email</description>
    <label>No recibir correos electrónicos</label>
    <type>Checkbox</type>
</CustomField>