force-app/main/default/objects/Individual/fields/lcs_gdpr__HasOptedOutOfFax__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutOfFax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que se trae del contacto o del candidato para indicar que no quiere recibir fax</description>
    <label>No recibir fax</label>
    <type>Checkbox</type>
</CustomField>