force-app/main/default/objects/Individual/fields/lcs_gdpr__HasOptedOutOfSMS__c.field-meta.xml
<CustomField>
    <fullName>lcs_gdpr__HasOptedOutOfSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si la Persona desea que se le contacte comercialmente por SMS.</description>
    <label>No recibir SMS</label>
    <type>Checkbox</type>
</CustomField>